# simple-job-listing-web

./: .gitignore  CLAUDE.md  README.md  dev.ps1  dev.sh
.claude/: settings.local.json
admin/: .env.example  CLAUDE.md  README.md  package.json  (+2 more)
backend/: .env.example  CLAUDE.md  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_table.py  0002_create_jobs_tags_tables.py  0003_create_form_fields_table.py  0004_create_applications_table.py  0005_add_salary_range_to_jobs.py  0006_add_cv_to_applications.py  0007_add_education_experience_tables.py  0008_add_refresh_tokens_table.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/logging/: config.py  middleware.py
backend/app/models/: __init__.py  application.py  application_education.py  application_experience.py  form_field.py  job.py  refresh_token.py  user.py
backend/app/routers/: applications.py  auth.py  jobs.py  public_jobs.py  settings.py
backend/app/schemas/: application.py  auth.py  form_field.py  job.py  public_job.py
backend/app/services/: application_service.py  auth_service.py  email_service.py  form_field_service.py  job_service.py
backend/app/storage/: __init__.py  base.py  local.py  s3.py
backend/app/utils/: exceptions.py  security.py
backend/tests/: conftest.py  test_admin_applications.py  test_applications.py  test_auth.py  test_email_config.py  test_form_fields.py  test_jobs.py  test_public_jobs.py  test_security.py  test_settings.py
backend/uploads/cv/0e7eb0a2-943b-4947-a2ec-fc9f01a7bf0b/: Quiz-recursive.docx
(+42 files in other folders)
